--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,4 @@ Description: This package uses
 License: GNU AGPLv3
 Encoding: UTF-8
 LazyData: true
+Imports: plyr, progress, parallel, foreach, doParallel, iterators, data.table
