Added reach adapter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(ema_acc_fast)
 export(light_features)
 export(mvpa_bouts)
 export(mvpa_features)
+export(reach_adapter)
 export(sedentary_features)
 import(DBI)
 import(RSQLite)
