--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ import(doParallel)
 import(eeptools)
 import(foreach)
 import(iterators)
+import(lubridate)
 import(parallel)
 import(plyr)
 import(progress)
